# gnome-inform7

./: COPYING  Makefile.am  autogen.sh  configure.ac  gnome-inform7.desktop  gnome-inform7.schemas  gnome-inform7.spec.in  webkit.xml
data/: Makefile.am
data/styles/: inform.xml  monochrome.xml  psychedelic.xml  subdued.xml  subtle.xml
data/ui/: panel.ui
pixmaps/: Makefile.am
pixmaps/hicolor/: Makefile.am
pixmaps/hicolor/128x128/apps/: Makefile.am
pixmaps/hicolor/128x128/mimetypes/: Makefile.am
pixmaps/hicolor/16x16/apps/: Makefile.am
pixmaps/hicolor/16x16/mimetypes/: Makefile.am
pixmaps/hicolor/32x32/apps/: Makefile.am
pixmaps/hicolor/32x32/mimetypes/: Makefile.am
pixmaps/hicolor/48x48/apps/: Makefile.am
pixmaps/hicolor/48x48/mimetypes/: Makefile.am
src/: Makefile.am  aboutwindow.builder.xml.in  actions.c  app.c  app.h  builder.c  builder.h  colorscheme.c  colorscheme.h  configfile.c  configfile.h  document-search.c  document.builder.xml  document.c  document.h  document.ui  elastic.c  error.c  extension.c  extension.uimanager.xml  file.c  file.h  gnome-inform7.builder.xml  gnome-inform7.ui  history.c  history.h  html.c  html.h  lang.c  main.c  newdialog.c  node.c  node.h  notepad.c  panel.builder.xml  panel.c  panel.h  panel.ui  prefs.c  prefs.h  (+26 more)
src/interpreters/: Makefile.am
src/libchimara/: Makefile.am
